--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
-<!DOCTYPE html>
-<html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meine Katzenwebsite</title>
+    <link rel="stylesheet" href="index.Background.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
-
-<header>
-  <h1>Willkommen auf meiner Katzenwebsite!</h1>
-</header>
-
-<nav>
-  <ul>
-    <li><a href="index.html">Startseite</a></li>
-    <li><a href="katzenbilder.html">Katzenbilder</a></li>
-    <li><a href="katzenrassen.html">Katzenrassen</a></li>
-    <li><a href="andere_katzen_website_von_mir.html">Externe Seite über Katzen</a></li>
-  </ul>
-</nav>
-
-<main>
-  <h2>Externe Seite über Katzen</h2>
-  <p>Hier können Sie auf eine externe Website über Katzen zugreifen.</p>
-  <p><a href="https:/sites.google.com/s-stb.ch/alles-ueber-die-hauskatze">Weiter zur externen Website über Katzen</a></p>
-</main>
-
-<footer>
-  <p>&copy; 2024 Meine Katzenwebsite</p>
-</footer>
-
+    <div class="r3">
+        <u> <h1 class="Titel";> All about Aphmau </h1> </u>   
+    </div>
+    <div class="r3">
+        <div class="c3">
+            <a href="infos.html"> <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/634ced57-da80-4cfd-a7b2-2523af5d6467/cc_Thumbnail_0.jpg"> </a>
+        </div>
+        <div class="c3">
+            <a href="quiz.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2171151&authkey=%21AGC4y9GhAokk3sY&width=800&height=450"> </a>
+        </div>
+        <div class="c3">
+            <a href="media.html"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM__w94JbnKFUs43GTDCduID-RJODnqeHCEA&s"> </a>
+        </div>
+    </div>
+     <div class="r3">
+        <div class="c3">
+            <h2 class="Info"> Info </h2> 
+        </div>
+        <div class="c3">
+            <h2 class="Quiz"> Quiz </h2>
+        </div>
+        <div class="c3">
+            <h2 class="Media"> Media </h2>
+        </div>
+    </div>
 </body>
-</html>
