--- a/Programmieren/index.Programmieren.html
+++ b/Programmieren/index.Programmieren.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="index.Background.css">
+    <link rel="stylesheet" href="index.Programmieren.Background.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
@@ -15,14 +15,14 @@
 </head>
 <body>
     <div class="r3">
-        <u> <h1 class="Titel";> All about Aphmau </h1> </u>   
+        <u> <h1 class="Titel";> Alles über das Programmieren </h1> </u>   
     </div>
     <div class="r3">
         <div class="c3">
-            <a href="infos.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
+            <a href="infos.Programmieren.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
         </div>
         <div class="c3">
-            <a href="quiz.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
+            <a href="präsentation.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
         </div>
         <div class="c3">
             <a href="media.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
@@ -33,7 +33,7 @@
             <h2 class="Info"> Info </h2> 
         </div>
         <div class="c3">
-            <h2 class="Quiz"> Quiz </h2>
+            <h2 class="Präsentation"> Präsentation </h2>
         </div>
         <div class="c3">
             <h2 class="Media"> Media </h2>
