--- a/Programmieren/index.Programmieren.html
+++ b/Programmieren/index.Programmieren.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="r3">
-        <u> <h1 class="Titel";> Alles über das Programmieren </h1> </u>   
+        <u> <h1 class="Titel";> All about the programming </h1> </u>   
     </div>
     <div class="r3">
         <div class="c3">
@@ -34,7 +34,7 @@
             <h2 class="Info"> Info </h2> 
         </div>
         <div class="c3">
-            <h2 class="Präsentation"> Präsentation </h2>
+            <h2 class="Präsentation"> Presentation </h2>
         </div>
         <div class="c3">
             <h2 class="Media"> Media </h2>
