--- a/infos.html
+++ b/infos.html
@@ -20,7 +20,7 @@
         <a class="Info" href="infos.html">Informations </a>
         <a class="Quiz" href="quiz.html">Quiz </a>
         <a class="Media" href="media.html">Media </a>
-        <a class="Programmieren" href="index.Programmieren.html">Programming </a>
+        <a class="Programmieren" href="Programmieren/index.Programmieren.html">Programming </a>
     </div>
     <div class="infogrid">
         <div class="infoElement">
