--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="media.html"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM__w94JbnKFUs43GTDCduID-RJODnqeHCEA&s"> </a>
         </div>
         <div class="c4">
-            <a href="index.Programmieren.html"> <img src="https://th.bing.com/th/id/R.ed2d29e1730fc38d4fcaa9060bc98d7e?rik=pUKteMVVcFxZjA&pid=ImgRaw&r=0"> </a>
+            <a href="Programmieren/index.Programmieren.html"> <img src="https://th.bing.com/th/id/R.ed2d29e1730fc38d4fcaa9060bc98d7e?rik=pUKteMVVcFxZjA&pid=ImgRaw&r=0"> </a>
         </div>
     </div>
      <div class="r4">
@@ -42,10 +42,8 @@
         <div class="c4">
             <h2 class="Media"> Media </h2>
         </div>
-         <div class="r4">
-             <div class="c4">
-                 <h2 class Programmieren> Programming </h2>
-             </div>
-         </div>
+        <div class="c4">
+            <h2 class Programmieren> Programming </h2>
+        </div>
     </div>
 </body>
