--- a/Programmieren/index.html
+++ b/Programmieren/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="r4">
-        <u> <h1 class="Titel";> All about the programming </h1> </u>   
+        <u> <h1 class="Titel"> All about the programming </h1> </u>   
     </div>
     <div class="r4">
         <div class="c4">
@@ -29,7 +29,7 @@
             <a href="media.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
         </div>
         <div class="c4">
-            <a href="index.html"> <img src="https://th.bing.com/th/id/OIP.TYEkgYAetjdGThOk2tRSjQHaEK?rs=1&pid=ImgDetMain"> </a>
+            <a href="main/index.html"> <img src="https://th.bing.com/th/id/OIP.TYEkgYAetjdGThOk2tRSjQHaEK?rs=1&pid=ImgDetMain"> </a>
         </div>
     </div>
      <div class="r4">
