--- a/Programmieren/index.html
+++ b/Programmieren/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="r4">
         <div class="c4">
-            <a href="infos.Programmieren.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
+            <a href="infos.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
         </div>
         <div class="c4">
             <a href="präsentation.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
