--- a/Programmieren/index.html
+++ b/Programmieren/index.html
@@ -37,7 +37,7 @@
             <h2 class="Info"> Info </h2> 
         </div>
         <div class="c4">
-            <h2 class="Präsentation"> Presentation </h2>
+            <h2 class="Praesentation"> Presentation </h2>
         </div>
         <div class="c4">
             <h2 class="Media"> Media </h2>
