--- a/Programmieren/präsentation.html
+++ b/Programmieren/präsentation.html
@@ -1,6 +1,6 @@
 <head>
     <link rel="stylesheet" href="infos.css">
-    <link rel="stylesheet" href="All.Pages.css">
+    <link rel="stylesheet" href="All.Pages.Programmieren.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
         <a class="Info" href="infos.html">Informations </a>
         <a class="Quiz" href="quiz.html">Quiz </a>
         <a class="Media" href="media.html">Media </a>
-        <a class="Aphmau" href="../index.html">Programming </a>
+        <a class="Aphmau" href="../index.html">Aphmau </a>
     </div>
     <div>
       <a  class="Präsentation" href="https://docs.google.com/presentation/d/1zZNf5Ncrj2yjEnvcpBoaXk85i47uVkLG7IIjw0FBuCE/edit?usp=sharing" target="_blank"> <h2>Presentation in German </h2> </a>
