--- a/Programmieren/präsentation.html
+++ b/Programmieren/präsentation.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="infos.css">
+    <link rel="stylesheet" href="Präsentation.html.css">
     <link rel="stylesheet" href="All.Pages.Programmieren.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
