--- a/Programmieren/präsentation.html
+++ b/Programmieren/präsentation.html
@@ -8,11 +8,10 @@
 <body>
     <div class="nav">
         <a class="Home" href="index.html">Home </a>
-        <a class="Info" href="infos.html">Informations </a>
-        <a class="Quiz" href="quiz.html">Quiz </a>
+        <a class="Presentation" href="infos.html">Informations </a>
         <a class="Media" href="media.html">Media </a>
         <a class="Aphmau" href="../index.html">Aphmau </a>
     </div>
     <div>
-      <a  class="Präsentation" href="https://docs.google.com/presentation/d/1zZNf5Ncrj2yjEnvcpBoaXk85i47uVkLG7IIjw0FBuCE/edit?usp=sharing" target="_blank"> <h2>Presentation in German </h2> </a>
+      <a  class="Praesentation" href="https://docs.google.com/presentation/d/1zZNf5Ncrj2yjEnvcpBoaXk85i47uVkLG7IIjw0FBuCE/edit?usp=sharing" target="_blank"> <h2>Presentation in German </h2> </a>
     </div>
