--- a/Programmieren/präsentation.html
+++ b/Programmieren/präsentation.html
@@ -13,5 +13,5 @@
         <a class="Aphmau" href="../index.html">Aphmau </a>
     </div>
     <div>
-      <a  class="Praesentation" href="https://docs.google.com/presentation/d/1zZNf5Ncrj2yjEnvcpBoaXk85i47uVkLG7IIjw0FBuCE/edit?usp=sharing" target="_blank"> <h2>Presentation in German </h2> </a>
+      <a  class="Praesentation" href="M&I Präsentation Programmieren.pptx" download="Präsentation"> <h2>Download the Presentation in German </h2> </a>
     </div>
