--- a/Programmieren/media.html
+++ b/Programmieren/media.html
@@ -17,7 +17,7 @@
 <body>
     <div class="nav">
         <a class="Home" href="index.html">Home </a>
-        <a class="Info" href="infos.html">Informations </a>
+        <a class="Presentation" href="infos.html">Informations </a>
         <a class="Media" href="media.html">Media </a>
         <a class="Radio" href="Radio/index.html"> Aphmau </a>
     </div>
