--- a/Programmieren/Radio/index.html
+++ b/Programmieren/Radio/index.html
@@ -1,6 +1,6 @@
 <head>
-    <link rel="stylesheet" href="index.Programmieren.Background.css">
-    <link rel="stylesheet" href="All.Pages.Programmieren.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="All.Pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
@@ -16,25 +16,25 @@
 </head>
 <body>
     <div class="r3">
-        <u> <h1 class="Titel"> All about the programming </h1> </u>   
+        <u> <h1 class="Titel"> Radiostations </h1> </u>   
     </div>
     <div class="r3">
         <div class="c3">
-            <a href="präsentation.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
+            <a href="Schweiz.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
         </div>
         <div class="c3">
-            <a href="media.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
+            <a href="Deutschland.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
         </div>
         <div class="c3">
-            <a href="Radio/index.html"> <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fblaupunkt.com%2Fde%2Fprodukt%2Finternetradio%2F&psig=AOvVaw2yvI5Fn70sS0kVs9zPWJNG&ust=1724233536639000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPjh7M2kg4gDFQAAAAAdAAAAABAE"> </a>
+            <a href="../../index.html"> <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fblaupunkt.com%2Fde%2Fprodukt%2Finternetradio%2F&psig=AOvVaw2yvI5Fn70sS0kVs9zPWJNG&ust=1724233536639000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPjh7M2kg4gDFQAAAAAdAAAAABAE"> </a>
         </div>
     </div>
      <div class="r3">
         <div class="c3">
-            <h2 class="Praesentation"> Presentation </h2>
+            <h2 class="Schweiz"> Swiss Radiostations </h2>
         </div>
         <div class="c3">
-            <h2 class="Media"> Media </h2>
+            <h2 class="Deutschland"> German Radiostations </h2>
         </div>
     </div>
 </body>
