--- a/Programmieren/Radio/index.html
+++ b/Programmieren/Radio/index.html
@@ -20,13 +20,13 @@
     </div>
     <div class="r3">
         <div class="c3">
-            <a href="Schweiz.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
+            <a href="Schweiz.html"> <img src="https://th.bing.com/th/id/OIP.CBWArzvzqsZ58ln_-dWQrgAAAA?rs=1&pid=ImgDetMain"> </a>
         </div>
         <div class="c3">
-            <a href="Deutschland.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
+            <a href="Deutschland.html"> <img src="https://www.publicdomainpictures.net/pictures/250000/velka/german-flag.jpg"> </a>
         </div>
         <div class="c3">
-            <a href="../../index.html"> <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fblaupunkt.com%2Fde%2Fprodukt%2Finternetradio%2F&psig=AOvVaw2yvI5Fn70sS0kVs9zPWJNG&ust=1724233536639000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPjh7M2kg4gDFQAAAAAdAAAAABAE"> </a>
+            <a href="../../index.html"> <img src="https://s2.dmcdn.net/v/UT4d81ZeDAbd70Tn7/x720"> </a>
         </div>
     </div>
      <div class="r3">
