--- a/Programmieren/index.html
+++ b/Programmieren/index.html
@@ -26,7 +26,7 @@
             <a href="media.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
         </div>
         <div class="c3">
-            <a href="Radio/index.html"> <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fblaupunkt.com%2Fde%2Fprodukt%2Finternetradio%2F&psig=AOvVaw2yvI5Fn70sS0kVs9zPWJNG&ust=1724233536639000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPjh7M2kg4gDFQAAAAAdAAAAABAE"> </a>
+            <a href="Radio/index.html"> <img src="https://www.soundmaster.de/media/image/7e/ed/71/IR6500SW_3.jpg"> </a>
         </div>
     </div>
      <div class="r3">
@@ -37,7 +37,7 @@
             <h2 class="Media"> Media </h2>
         </div>
         <div class="c3">
-            <h2 class="Radio"> Listen to German Radiostations </h2>
+            <h2 class="Radio"> Listen to Radiostations in German </h2>
         </div>
     </div>
 </body>
