--- a/Programmieren/Radio/index.html
+++ b/Programmieren/Radio/index.html
@@ -39,7 +39,7 @@
             <h2 class="Deutschland"> German Radiostations </h2>
         </div>
         <div class="c4">
-            <h2 class="Apmau"> Return to First Page </h2>
+            <h2 class="Aphmau"> Return to First Page </h2>
         </div>
         <div class="c4">
             <h2 class="Programmieren"> Return to last Page </h2>
