--- a/Programmieren/media.html
+++ b/Programmieren/media.html
@@ -19,7 +19,7 @@
         <a class="Home" href="index.html">Home </a>
         <a class="Presentation" href="infos.html">Informations </a>
         <a class="Media" href="media.html">Media </a>
-        <a class="Radio" href="Radio/index.html"> Aphmau </a>
+        <a class="Radio" href="Radio/index.html"> Radio </a>
     </div>
     <div class="grid">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/CIRGjwYgdT4?si=fQKi7bhktlKocF-l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
