--- a/Programmieren/präsentation.html
+++ b/Programmieren/präsentation.html
@@ -8,9 +8,9 @@
 <body>
     <div class="nav">
         <a class="Home" href="index.html">Home </a>
-        <a class="Presentation" href="infos.html">Informations </a>
+        <a class="Presentation" href="presentation.html">Presentation </a>
         <a class="Media" href="media.html">Media </a>
-        <a class="Radio" href="Radio/index.html">Aphmau </a>
+        <a class="Radio" href="Radio/index.html">Radio </a>
     </div>
     <div>
       <a  class="Praesentation" href="M&I Präsentation Programmieren.pptx" download="Präsentation"> <h2>Download the Presentation in German </h2> </a>
