--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -17,7 +17,7 @@
 <body>
     <div class="nav">
         <a class="Pilatus" href="Radio.Pilatus.html">Pilatus </a>
-        <a class="Presentation" href="presentation.html">Presentation </a>
+        <a class="Sunshine" href="Sunshine.html">Sunshine </a>
         <a class="Media" href="media.html">Media </a>
         <a class="Radio" href="Radio/index.html"> Radio </a>
     </div>
