--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -18,7 +18,7 @@
     <div class="nav">
         <a class="Pilatus" href="Radio.Pilatus.html">Pilatus </a>
         <a class="Sunshine" href="Sunshine.html">Sunshine </a>
-        <a class="Media" href="media.html">Media </a>
+        <a class="NRJ" href="NRJ.html">NRJ/Energy </a>
         <a class="Radio" href="Radio/index.html"> Radio </a>
     </div>
 </body>
