--- a/Programmieren/Radio/NRJ.html
+++ b/Programmieren/Radio/NRJ.html
@@ -1,5 +1,9 @@
 <head>
-  
+    <link rel="stylesheet" href="NRJ.css">
+    <link rel="stylesheet" href="All.Pages.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
 </head>
 <body>
    <div class="nav">
