--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -19,6 +19,6 @@
         <a class="Pilatus" href="Radio.Pilatus.html">Pilatus </a>
         <a class="Sunshine" href="Sunshine.html">Sunshine </a>
         <a class="NRJ" href="NRJ.html">NRJ/Energy </a>
-        <a class="Radio" href="Radio/index.html"> Radio </a>
+        <a class="Home" href="index.html">Home </a>
     </div>
 </body>
