--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -16,9 +16,10 @@
 </head>
 <body>
     <div class="nav">
+        <a class="Home" href="index.html">Home </a>
         <a class="Pilatus" href="Radio.Pilatus.html">Pilatus </a>
         <a class="Sunshine" href="Sunshine.html">Sunshine </a>
         <a class="NRJ" href="NRJ.html">NRJ/Energy </a>
-        <a class="Home" href="index.html">Home </a>
+        <a class="24" href="Radio24.html">Radio24 </a>
     </div>
 </body>
