--- a/Programmieren/Radio/Radio24.html
+++ b/Programmieren/Radio/Radio24.html
@@ -1,9 +1,10 @@
 <head>
-  <link rel="stylesheet" href="24.css">
+    <link rel="stylesheet" href="24.css">
     <link rel="stylesheet" href="All.Pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <head>
   <div class="nav">
