--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -21,7 +21,7 @@
         <a class="Pilatus" href="Radio.Pilatus.html">Pilatus </a>
         <a class="Sunshine" href="Sunshine.html">Sunshine </a>
         <a class="NRJ" href="NRJ.html">NRJ/Energy </a>
-        <a class="24" href="Radio24.html">Radio24 </a>
+        <a class="Radio" href="Radio24.html">Radio24 </a>
         <a class="Argovia" href="Argovia.html">Argovia </a>
     </div>
 </body>
