--- a/Programmieren/index.html
+++ b/Programmieren/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="Programmieren/Radio/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="Radio/favicon.ico">
 </head>
 <body>
     <div class="r4">
@@ -30,7 +30,7 @@
             <a href="Radio/index.html"> <img src="https://www.soundmaster.de/media/image/7e/ed/71/IR6500SW_3.jpg"> </a>
         </div>
         <div>
-            <a href="../index.html"> <img src="https://s2.dmcdn.net/v/UT4d81ZeDAbd70Tn7/x720"> </a>
+            <a href="../index.html"> <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/634ced57-da80-4cfd-a7b2-2523af5d6467/cc_Thumbnail_0.jpg"> </a>
         </div>
     </div>
      <div class="r4">
