--- a/Programmieren/index.html
+++ b/Programmieren/index.html
@@ -30,7 +30,7 @@
             <a href="Radio/index.html"> <img src="https://www.soundmaster.de/media/image/7e/ed/71/IR6500SW_3.jpg"> </a>
         </div>
         <div>
-            <a href="../index.html"> <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/634ced57-da80-4cfd-a7b2-2523af5d6467/cc_Thumbnail_0.jpg"> </a>
+            <a href="../index.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2171147&authkey=%21AA5D515_3_mgzp0&width=236&height=213"> </a>
         </div>
     </div>
      <div class="r4">
