--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -23,6 +23,6 @@
         <a class="NRJ" href="NRJ.html">NRJ/Energy </a>
         <a class="Radio" href="Radio24.html">Radio24 </a>
         <a class="Argovia" href="Argovia.html">Argovia </a>
-        <a class="FM" href="fm.html">FM1 </a>
+        <a class="FM" href="FM1.html">FM1 </a>
     </div>
 </body>
