--- a/Programmieren/Radio/Deutschland.html
+++ b/Programmieren/Radio/Deutschland.html
@@ -17,5 +17,8 @@
 </head>
 <body>
     <div class="nav">
+        <a class="Home" href="index.html">Home </a>
+        <a class="Antenne" href="Antenne.html">Antenne Bayern </a>
+        <a class="Radio7" href="Radio7.html">Radio7 </a>
     </div>
 </body>
