--- a/Programmieren/Radio/Deutschland.html
+++ b/Programmieren/Radio/Deutschland.html
@@ -20,5 +20,6 @@
         <a class="Home" href="index.html">Home </a>
         <a class="Antenne" href="Antenne.html">Antenne Bayern </a>
         <a class="Radio7" href="Radio7.html">Radio7 </a>
+        <a class="Toggo" href="ToogoRadio.html">Toggo Radio </a>
     </div>
 </body>
