--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -24,5 +24,6 @@
         <a class="Radio" href="Radio24.html">Radio24 </a>
         <a class="Argovia" href="Argovia.html">Argovia </a>
         <a class="FM" href="FM1.html">FM1 </a>
+        <a class="Central" href="Central.html">Radio Central </a>
     </div>
 </body>
