--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="infos.html"> <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/634ced57-da80-4cfd-a7b2-2523af5d6467/cc_Thumbnail_0.jpg"> </a>
         </div>
         <div class="c4">
-            <a href="quiz.html"> <img src="https://drive.google.com/file/d/1b3rorAnvOPBmR7yEVr8wR8s-5FGtuE4r/view?usp=sharing"> </a>
+            <a href="quiz.html"> <img src="https://s2.dmcdn.net/v/UT4d81ZeDAbd70Tn7/x720"> </a>
         </div>
         <div class="c4">
             <a href="media.html"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM__w94JbnKFUs43GTDCduID-RJODnqeHCEA&s"> </a>
