--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2 class="Programmieren"> Programming </h2>
         </div>
         <div class="c5">
-            <h2 class="Radio"> Listen to Radiostations in German </h2>
+            <h2 class="Radio"> Listen to Radiostations in different Languages </h2>
         </div>
     </div>
 </body>
