--- a/Programmieren/index.html
+++ b/Programmieren/index.html
@@ -41,7 +41,7 @@
             <h2 class="Media"> Media </h2>
         </div>
         <div class="c4">
-            <h2 class="Radio"> Listen to Radiostations in German </h2>
+            <h2 class="Radio"> Listen to Radiostations in different Languages </h2>
         </div>
         <div class="c4">
             <h2 class="Aphmau">Go To last Page </h2>
