--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -25,5 +25,6 @@
         <a class="Argovia" href="Argovia.html">Argovia </a>
         <a class="FM" href="FM1.html">FM1 </a>
         <a class="Central" href="Central.html">Radio Central </a>
+        <a class="See" href="See.html">Radio Zürisee </a>
     </div>
 </body>
