--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -26,5 +26,6 @@
         <a class="FM" href="FM1.html">FM1 </a>
         <a class="Central" href="Central.html">Radio Central </a>
         <a class="See" href="See.html">Radio Zürisee </a>
+        <a class="Basilisk" href="Basilisk.html">Basilisk </a>
     </div>
 </body>
