--- a/Programmieren/Radio/Install/index.html
+++ b/Programmieren/Radio/Install/index.html
@@ -17,17 +17,17 @@
 </head>
 <body>
     <div class="r3">
-        <u> <h1 class="Titel"> Radiostations </h1> </u>   
+        <u> <h1 class="Titel"> Install this Website as an App </h1> </u>   
     </div>
     <div class="r3">
         <div class="c5">
-            <a href="Schweiz.html"> <img src="https://th.bing.com/th/id/OIP.CBWArzvzqsZ58ln_-dWQrgAAAA?rs=1&pid=ImgDetMain"> </a>
+            <a href="Android.html"> <img src="https://th.bing.com/th/id/OIP.CBWArzvzqsZ58ln_-dWQrgAAAA?rs=1&pid=ImgDetMain"> </a>
         </div>
         <div class="c5">
-            <a href="Deutschland.html"> <img src="https://www.publicdomainpictures.net/pictures/250000/velka/german-flag.jpg"> </a>
+            <a href="Windows.html"> <img src="https://www.publicdomainpictures.net/pictures/250000/velka/german-flag.jpg"> </a>
         </div>
         <div class="c5">
-            <a href="Romania.html"> <img src="https://th.bing.com/th/id/OIP.2eQWzTx6RizpCY3f928-wgHaE8?rs=1&pid=ImgDetMain"> </a>
+            <a href="../../../index.html"> <img src="https://th.bing.com/th/id/OIP.2eQWzTx6RizpCY3f928-wgHaE8?rs=1&pid=ImgDetMain"> </a>
     </div>
         <div class="c5">
             <a href="../../index.html"> <img src="https://s2.dmcdn.net/v/UT4d81ZeDAbd70Tn7/x720"> </a>
@@ -37,19 +37,19 @@
     </div>
      <div class="r3">
         <div class="c5">
-            <h2 class="Schweiz"> Swiss Radiostations </h2>
+            <h2 class="Android"> Android </h2>
         </div>
         <div class="c5">
-            <h2 class="Deutschland"> German Radiostations </h2>
-        </div>
-        <div class="c5">
-            <h2 class="Romania"> Romanian Radiostations </h2>
+            <h2 class="Windows"> Windows </h2>
         </div>
         <div class="c5">
             <h2 class="Aphmau"> Return to First Page </h2>
         </div>
         <div class="c5">
-            <h2 class="Programmieren"> Return to last Page </h2>
+            <h2 class="Programmieren"> Return to Second Page </h2>
+        </div>
+        <div class="c5">
+            <h2 class="Radio"> Return to last Page </h2>
         </div>
     </div>
 </body>
