--- a/infos.html
+++ b/infos.html
@@ -23,6 +23,7 @@
         <a class="Media" href="media.html">Media </a>
         <a class="Programmieren" href="Programmieren/index.html">Programming </a>
         <a class="Radio" href="Programmieren/Radio/index.html">Radio </a>
+        <a class="Apps" href="Programmieren/Radio/Install/index.html">Install </a>
     </div>
     <div class="infogrid">
         <div class="infoElement">
