--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="media.html"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM__w94JbnKFUs43GTDCduID-RJODnqeHCEA&s"> </a>
         </div>
         <div class="c6">
-            <a href=""> <img src="https://th.bing.com/th/id/R.ed2d29e1730fc38d4fcaa9060bc98d7e?rik=pUKteMVVcFxZjA&pid=ImgRaw&r=0"> </a>
+            <a href="https://freetimemaker.github.io/programming"> <img src="https://th.bing.com/th/id/R.ed2d29e1730fc38d4fcaa9060bc98d7e?rik=pUKteMVVcFxZjA&pid=ImgRaw&r=0"> </a>
         </div>
         <div class="c6">
             <a href=""> <img src="https://th.bing.com/th/id/R.00b0b4d6719003172a3a49d139f441f7?rik=UrHn41Ie3LBDJg&pid=ImgRaw&r=0"> </a>
