--- a/Programmieren/Radio/Install/Android.html
+++ b/Programmieren/Radio/Install/Android.html
@@ -25,6 +25,6 @@
         <a class="Radio" href="../index.html"> Radio </a>
     </div>
     <div>
-        <a  class="Android.App" href="freetimemaker.github.io.apk" download="freetimemaker.github.io.apk"> <h2>Download the Presentation in German </h2> </a>
+        <a  class="Android.App" href="freetimemaker.github.io.apk" download="freetimemaker.github.io.apk"> <h2>Download the Android App </h2> </a>
     </div>
 </body>
