Deleted Android, Updated Index and Added Windows

--- a/Programmieren/Radio/Install/windows.html
+++ b/Programmieren/Radio/Install/windows.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="Android.css">
+    <link rel="stylesheet" href="Windows.css">
     <link rel="stylesheet" href="All.Pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,13 +18,9 @@
 <body>
     <div class="nav">
         <a class="Home" href="index.html"> Home </a>
-        <a class="Android" href="Android.html"> Android </a>
-        <a class="Windows" href="Windows.html"> Windows </a>
+        <a class="Windows" href="windows.html"> Windows </a>
         <a class="Aphmau" href="../../../index.html"> Aphmau </a>
         <a class="Programmieren" href="../../index.html"> Programming </a>
         <a class="Radio" href="../index.html"> Radio </a>
-    </div>
-    <div>
-        <a  class="Android.App" href="freetimemaker.github.io.apk" download="freetimemaker.github.io.apk"> <h2>Download the Android App </h2> </a>
     </div>
 </body>
