--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -27,5 +27,6 @@
         <a class="Central" href="Central.html">Radio Central </a>
         <a class="See" href="See.html">Radio Zürisee </a>
         <a class="Basilisk" href="Basilisk.html">Basilisk </a>
+        <a class="SRF" href="SRF.html">SRF Virus </a>
     </div>
 </body>
