--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -28,5 +28,6 @@
         <a class="See" href="See.html">Radio Zürisee </a>
         <a class="Basilisk" href="Basilisk.html">Basilisk </a>
         <a class="SRF" href="SRF.html">SRF Virus </a>
+        <a class="SRF3" href="SRF3.html">SRF3 </a>
     </div>
 </body>
