--- a/infos.html
+++ b/infos.html
@@ -23,7 +23,8 @@
         <a class="Media" href="media.html">Media </a>
         <a class="Programmieren" href="Programmieren/index.html">Programming </a>
         <a class="Radio" href="Programmieren/Radio/index.html">Radio </a>
-        <a class="Apps" href="Programmieren/Radio/Install/index.html">Install </a>
+        <a class="Apps" href="Programmieren/Radio/Install/index.html">Install App </a>
+        <a class="Install" href="Programmieren/Radio/Install/Apps/index.html">Other Apps</a>
     </div>
     <div class="infogrid">
         <div class="infoElement">
