--- a/Programmieren/Radio/Install/Apps/index.html
+++ b/Programmieren/Radio/Install/Apps/index.html
@@ -70,10 +70,10 @@
             <h2 class="Programmieren"> Return to Second Page </h2>
         </div>
         <div class="c6">
-            <h2 class="Radio"> Return to last Page </h2>
+            <h2 class="Radio"> Return to Third Page </h2>
         </div>
         <div class="c6">
-            <a class="Apps"> Install this Website as an App </a>
+            <a class="Apps"> Return to last Page </a>
         </div>
     </div>
 </body>
