--- a/media.html
+++ b/media.html
@@ -24,6 +24,7 @@
         <a class="Programmieren" href="Programmieren/index.html"> Programming </a>
         <a class="Radio" href="Programmieren/Radio/index.html">Radio </a>
         <a class="Apps" href="Programmieren/Radio/Install/index.html">Install </a>
+        <a class="Install" href="Programmieren/Radio/Install/Apps/index.html">Install other </a>
     </div>
     <div class="grid">
         <img src="https://yt3.googleusercontent.com/ytc/AIdro_nrreXs_X2s2GZa2tQ6w1a2dvmuAYF3cmsTulf6xdxUHMM=s176-c-k-c0x00ffffff-no-rj-mo">
