--- a/quiz.html
+++ b/quiz.html
@@ -25,6 +25,7 @@
         <a class="Programmieren" href="Programmieren/index.html">Programming </a>
         <a class="Radio" href="Programmieren/Radio/index.html">Radio </a>
         <a class="Apps" href="Programmieren/Radio/Install/index.html">Install </a>
+        <a class="Install" href="Programmieren/Radio/Install/Apps/index.html">Install other </a>
     </div>
     <div class="Quizes">
         <div class="questions" id="question_0">
