--- a/Programmieren/media.html
+++ b/Programmieren/media.html
@@ -22,7 +22,8 @@
         <a class="Media" href="media.html">Media </a>
         <a class="Radio" href="Radio/index.html"> Radio </a>
         <a class="Aphmau" href="../index.html">Aphmau </a>
-        <a class="Apps" href="Programmieren/Radio/Install/index.html">Install </a>
+        <a class="Apps" href="Radio/Install/index.html">Install </a>
+        <a class="Install" href="Radio/Install/Apps/index.html">Install other </a>
     </div>
     <div class="grid">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/CIRGjwYgdT4?si=fQKi7bhktlKocF-l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
