--- a/Programmieren/Radio/Install/Apps/index.html
+++ b/Programmieren/Radio/Install/Apps/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="r3">
-        <u> <h1 class="Titel"> Install this Website as an App </h1> </u>   
+        <u> <h1 class="Titel"> Install other Apps </h1> </u>   
     </div>
     <div class="r3">
         <div class="c6">
