Update and Create Android

--- a/Programmieren/Radio/Install/Apps/Android.Spiele.html
+++ b/Programmieren/Radio/Install/Apps/Android.Spiele.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="Android.css">
+    <link rel="stylesheet" href="Android.Spiele.css">
     <link rel="stylesheet" href="All.Pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +17,10 @@
 </head>
 <body>
     <div class="nav">
-        <a class="Home" href="index.html"> Home </a>
-        <a class="Games" href="Android.Spiele.html"> Games </a>
-        <a class="Apps" href="Android.Apps.html"> Apps </a>
+        <a class="Home" href="Android.html"> Home </a>
+        <a class="Roblox" href="Roblox.html"> Roblox </a>
+        <a class="SnackBar" href="SnackBar.html"> Idle SnackBar </a>
+        <a class="Monopoly" href="Monopoly.html"> Monopoly GO </a>
+        <a class="Tycoon" href="Tycoon.html"> Idle Miner Tycoon </a>
     </div>
 </body>
