--- a/Programmieren/Radio/Install/Apps/Android.Apps.html
+++ b/Programmieren/Radio/Install/Apps/Android.Apps.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="Android.css">
+    <link rel="stylesheet" href="Android.Apps.css">
     <link rel="stylesheet" href="All.Pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +17,13 @@
 </head>
 <body>
     <div class="nav">
-        <a class="Home" href="index.html"> Home </a>
-        <a class="Games" href="Android.Spiele.html"> Games </a>
-        <a class="Apps" href="Android.Apps.html"> Apps </a>
+        <a class="Home" href="Android.html"> Home </a>
+        <a class="ChatGPT" href="ChatGPT.html"> ChatGPT </a>
+        <a class="WhatsApp" href="WhatsApp.html"> WhatsApp </a>
+        <a class="Snapchat" href="Snapchat.html"> Snapchat </a>
+        <a class="X" href="X.html"> X </a>
+        <a class="Word" href="Word.html"> Microsoft Word </a>
+        <a class="YouTube" href="YouTube.html"> YouTube </a>
     </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ktlau2L0GNA?si=KcGOTYGxdZO2-Wtz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
