--- a/Programmieren/Radio/Install/Apps/Android.Apps.html
+++ b/Programmieren/Radio/Install/Apps/Android.Apps.html
@@ -24,6 +24,9 @@
         <a class="X" href="X.html"> X </a>
         <a class="Word" href="Word.html"> Microsoft Word </a>
         <a class="YouTube" href="YouTube.html"> YouTube </a>
+        <a class="Netflix" href="Netflix.html"> Netflix </a>
+        <a class="Disney" href="Disney.html"> Disney+ </a>
+        <a class="Spotify" href="Spotify.html"> Spotify </a>
+        <a class="Insta" href="Instagram.html"> Instagram </a>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ktlau2L0GNA?si=KcGOTYGxdZO2-Wtz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
