--- a/Programmieren/Radio/Install/Apps/Tycoon.html
+++ b/Programmieren/Radio/Install/Apps/Tycoon.html
@@ -20,5 +20,5 @@
         <a class="Home" href="Android.html"> Home </a>
     </div>
     <h2 class="Information"> You need A PC and 7Zip for that because i used the format .7z. </h2>
-    <a  class="Zip" href="uptodown-com.fluffyfairygames.idleminertycoon.apk" download="Idle.Miner.Tycoon.apk"> <h2 class="Download">Download Idle Miner Tycoon </h2> </a>
+    <a  class="Zip" href="uptodown-com.fluffyfairygames.idleminertycoon.apk" download="Idle Miner Tycoon.apk"> <h2 class="Download">Download Idle Miner Tycoon </h2> </a>
 </body>
