--- a/Programmieren/Radio/Install/Apps/Android.Spiele.html
+++ b/Programmieren/Radio/Install/Apps/Android.Spiele.html
@@ -22,5 +22,8 @@
         <a class="SnackBar" href="SnackBar.html"> Idle SnackBar </a>
         <a class="Monopoly" href="Monopoly.html"> Monopoly GO </a>
         <a class="Tycoon" href="Tycoon.html"> Idle Miner Tycoon </a>
+        <a class="MonopolyTycoon" href="MonopolyTycoon.html"> Monopoly Tycoon </a>
+        <a class="CPM" href="CMP.html"> Car Parking Multiplayer </a>
+        <a class="CPM2" href="CPM2"> Car Parking Multiplayer 2</a>
     </div>
 </body>
