--- a/Programmieren/Radio/Install/Apps/Android.Apps.html
+++ b/Programmieren/Radio/Install/Apps/Android.Apps.html
@@ -22,11 +22,12 @@
         <a class="WhatsApp" href="WhatsApp.html"> WhatsApp </a>
         <a class="Snapchat" href="Snapchat.html"> Snapchat </a>
         <a class="X" href="X.html"> X </a>
-        <a class="Word" href="Word.html"> Microsoft Word </a>
+        <a class="Microsoft" href="Microsoft.html"> Microsoft Apps </a>
         <a class="YouTube" href="YouTube.html"> YouTube </a>
         <a class="Netflix" href="Netflix.html"> Netflix </a>
         <a class="Disney" href="Disney.html"> Disney+ </a>
         <a class="Spotify" href="Spotify.html"> Spotify </a>
         <a class="Insta" href="Instagram.html"> Instagram </a>
+        <a class="Github" href="Github.html"> Github </a>
     </div>
 </body>
