--- a/Programmieren/Radio/Install/Windows.html
+++ b/Programmieren/Radio/Install/Windows.html
@@ -23,5 +23,5 @@
         <a class="Programmieren" href="../../index.html"> Programming </a>
         <a class="Radio" href="../index.html"> Radio </a>
     </div>
-    <a  class="Windows.App" href="freetimemaker.github.io.msi" download="Windows.App.msi"> <h2>Download the Website as an Windows App </h2> </a>
+    <a  class="Windows.App" href="freetimemaker.github.io.msi" download="Windows App.msi"> <h2>Download the Website as an Windows App </h2> </a>
 </body>
