Updated and Created MonopolyTycoon

--- a/Programmieren/Radio/Install/Apps/MonopolyTycoon.html
+++ b/Programmieren/Radio/Install/Apps/MonopolyTycoon.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="Tycoon.css">
+    <link rel="stylesheet" href="MonopolyTycoon.css">
     <link rel="stylesheet" href="All.Pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <div class="nav">
         <a class="Home" href="Android.Spiele.html"> Home </a>
     </div>
-    <a class="Zip" href="#" onclick="downloadFiles()">Install Monopoly Tycoon and the additional Files.</a>
+    <a class="ZIP" href="#" onclick="downloadFiles()">Install Monopoly Tycoon and the additional Files.</a>
 
     <script>
         function downloadFiles() {
