--- a/Programmieren/Radio/Install/Apps/Android.Spiele.html
+++ b/Programmieren/Radio/Install/Apps/Android.Spiele.html
@@ -23,7 +23,7 @@
         <a class="Monopoly" href="Monopoly.html"> Monopoly GO </a>
         <a class="Tycoon" href="Tycoon.html"> Idle Miner Tycoon </a>
         <a class="MonopolyTycoon" href="MonopolyTycoon.html"> Monopoly Tycoon </a>
-        <a class="CPM" href="CMP.html"> Car Parking Multiplayer </a>
+        <a class="CPM" href="CPM.html"> Car Parking Multiplayer </a>
         <a class="CPM2" href="CPM2.html"> Car Parking Multiplayer 2</a>
     </div>
 </body>
