Updated CPM and CMP2

--- a/Programmieren/Radio/Install/Apps/CPM.html
+++ b/Programmieren/Radio/Install/Apps/CPM.html
@@ -19,7 +19,7 @@
     <div class="nav">
         <a class="Home" href="Android.Spiele.html"> Home </a>
     </div>
-    <a class="ZIP" href="#" onclick="downloadFiles()">Install SnackBar and the additional Files.</a>
+    <a class="ZIP" href="#" onclick="downloadFiles()">Install Car Parking Multiplayer and the additional Files.</a>
 
     <script>
         function downloadFiles() {
