--- a/Programmieren/Radio/Install/Apps/CPM2.html
+++ b/Programmieren/Radio/Install/Apps/CPM2.html
@@ -19,5 +19,5 @@
     <div class="nav">
         <a class="Home" href="Android.Spiele.html"> Home </a>
     </div>
-    <a  class="APK" href="uptodown-com.olzhas.carparking.multyplayer2.apk" download="CPM2.apk"> <h2 class="Download">Download CPM2 </h2> </a>
+    <a  class="APK" href="uptodown-com.olzhas.carparking.multyplayer2.apk" download="CPM2.apk"> <h2 class="Download">Download Car Parking Multiplayer 2 </h2> </a>
 </body>
