--- a/Programmieren/Radio/Install/Apps/Android.Apps.html
+++ b/Programmieren/Radio/Install/Apps/Android.Apps.html
@@ -23,12 +23,14 @@
         <a class="Snapchat" href="Snapchat.html"> Snapchat </a>
         <a class="X" href="X.html"> X </a>
         <a class="Microsoft" href="Microsoft.html"> Microsoft Apps </a>
-        <a class="YouTube" href="YouTube.html"> YouTube </a>
+        <a class="Google" href="Google.html"> Google Apps </a>
         <a class="Netflix" href="Netflix.html"> Netflix </a>
-        <a class="Disney" href="Disney.html"> Disney+ </a>
+        <a class="Disney" href="DisneyApps.html"> Disney Apps </a>
         <a class="Spotify" href="Spotify.html"> Spotify </a>
         <a class="Insta" href="Instagram.html"> Instagram </a>
         <a class="Threads" href="Threads.html"> Threads </a>
         <a class="Github" href="Github.html"> Github </a>
+        <a class="TikTok" href="TikTokApps.html"> TikTok Apps </a>
+        <a class="Twitch" href="Twitch.html"> Twitch </a>
     </div>
 </body>
