--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
     </div>
      <div class="r6">
         <div class="c6">
-            <h2 href="infos.html" class="Info"> Info </h2> 
+            <a href="infos.html"> <h2 class="Info"> Info </h2> </a>
         </div>
         <div class="c6">
-            <h2 href="quiz.html" class="Quiz"> Quiz </h2>
+            <a href="quiz html"> <h2 class="Quiz"> Quiz </h2> </a>
         </div>
         <div class="c6">
-            <h2 href="media.html" class="Media"> Media </h2>
+            <a href="media.html"> <h2 class="Media"> Media </h2> </a>
         </div>
         <div class="c6">
-            <h2 href="Programmieren/index.html" class="Programmieren"> Programming </h2>
+            <a href="Programmieren/index.html"> <h2 class="Programmieren"> Programming </h2> </a>
         </div>
         <div class="c6">
-            <h2 href="Programmieren/Radio/index.html"class="Radio"> Listen to Radiostations in different Languages </h2>
+            <a href="Programmieren/Radio/index.html"> <h2 class="Radio"> Listen to Radiostations in different Languages </h2> </a>
         </div>
         <div class="c6">
-            <h2 href="Programmieren/Radio/Install/index.html"class="Apps"> Install this Website as an App </h2>
+            <a href="Programmieren/Radio/Install/index.html"> <h2 class="Apps"> Install this Website as an App </h2> </a>
         </div>
         <div class="c6">
-            <h2 href="Programmieren/Radio/Install/Apps/index.html"class="Install"> Install other Apps </h2>
+            <a href="Programmieren/Radio/Install/Apps/index.html"> <h2 class="Install"> Install other Apps </h2> </a>
         </div>
     </div>
 </body>
