--- a/Programmieren/index.html
+++ b/Programmieren/index.html
@@ -41,22 +41,22 @@
     </div>
      <div class="r5">
         <div class="c5">
-            <h2 class="Praesentation"> Presentation </h2>
+            <a href="presentation.html"> <h2 class="Praesentation"> Presentation </h2> </a>
         </div>
         <div class="c5">
-            <h2 class="Media"> Media </h2>
+            <a href="media.html"> <h2 class="Media"> Media </h2> </a>
         </div>
         <div class="c5">
-            <h2 class="Radio"> Listen to Radiostations in different Languages </h2>
+            <a href"Radio/index.html"> <h2 class="Radio"> Listen to Radiostations in different Languages </h2> </a>
         </div>
         <div class="c5">
-            <h2 class="Aphmau">Go To last Page </h2>
+            <a href"../index.html"> <h2 class="Aphmau">Go To last Page </h2> </a>
         </div>
          <div class="c5">
-             <a class="Apps">Install this Website as an App </a>
+             <a href="Radio/Install/index.html"> <h2 class="Apps">Install this Website as an App </h2> </a>
          </div>
          <div class="c5">
-            <a class="Install">Install other Apps </a>
+            <a href="Radio/Install/Apps/index.html"> <h2 class="Install">Install other Apps </h2> </a>
          </div>
     </div>
 </body>
